--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -21,7 +21,7 @@ jobs:
           distribution: temurin
 
       - name: Build
-        run: mvn package --file pom.xml
+        run: mvn package
 
       - name: Extract repository name
         run: echo "NAME=$(basename ${{ github.repository }})" >> $GITHUB_ENV
