--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -20,6 +20,9 @@ jobs:
           java-version: 25
           distribution: temurin
 
+      - name: Download Server
+        run: wget -O HytaleServer.jar ${{ secrets.SERVER }}
+
       - name: Build
         run: mvn package
 
